# dino-drawer

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/skills/expand-dino-catalog/: SKILL.md
docs/superpowers/plans/: 2026-05-12-dino-drawer.md
docs/superpowers/specs/: 2026-05-12-dino-drawer-design.md
published/: catalog.json
scripts/: test_imagen4.py
src/dino_drawer/: __init__.py  __main__.py  agent.py  models.py
src/dino_drawer/clients/: __init__.py  gemini.py
src/dino_drawer/compose/: __init__.py  __main__.py  render.py
src/dino_drawer/image/: __init__.py  __main__.py  diffusion.py  silhouette.py
src/dino_drawer/publish/: __init__.py  __main__.py  manifest.py  optimize.py  r2.py
src/dino_drawer/research/: __init__.py
src/dino_drawer/synthesis/: __init__.py  __main__.py  main.py  ollama_client.py  prompts.py
src/dino_drawer/video/: __init__.py  __main__.py  generate.py
src/dino_drawer/vision/: __init__.py  __main__.py  classifier.py  describer.py  (+1 more)
tests/: __init__.py  test_agent.py  test_cli.py  test_compose.py  test_diffusion.py  test_gemini_client.py  test_models.py  test_publish_manifest.py  test_publish_optimize.py  test_publish_r2.py  test_research_images.py  test_research_papers.py  test_silhouette.py  test_synthesis_client.py  test_synthesis_main.py  test_vision_classifier.py  test_vision_describer.py  test_vlm_client.py
tests/fixtures/: __init__.py  openalex_trex.json  semantic_scholar_trex.json  trex_papers.json  trex_refs.json  wikimedia_imageinfo_trex.json  wikimedia_search_trex.json  wikipedia_trex.json
(+14 files in other folders)
