[project]
name = "dino-drawer"
version = "0.1.0"
description = "Generate scientific infographics of prehistoric species from local LLMs"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "ollama>=0.3",
    "jinja2>=3.1",
    "playwright>=1.45",
    "pillow>=10.3",
    "diffusers>=0.30",
    "transformers>=4.44",
    "accelerate>=0.33",
    "torch>=2.4",
    "safetensors>=0.4",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "google-genai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
]

[project.scripts]
dino-drawer = "dino_drawer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dino_drawer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
